<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                style="@style/TextBigTitle"/>

            <LinearLayout
                android:id="@+id/layout_bus_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/background_rounding_shape"
                app:layout_constraintTop_toBottomOf="@id/text_title"
                android:layout_marginTop="@dimen/margin_double"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal">

                <TextView
                    android:id="@+id/text_bus_18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bus_18"
                    android:layout_marginTop="@dimen/margin_half"
                    android:layout_marginLeft="@dimen/margin_half"
                    android:layout_marginRight="@dimen/margin_half"
                    style="@style/TextBigTitle"/>

                <Button
                    android:id="@+id/btn_ch_to_gi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ch_to_gi"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="@dimen/text_size_title"
                    android:minHeight="@dimen/button_minHeight"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:layout_marginTop="@dimen/margin_half"
                    android:layout_marginLeft="@dimen/margin_half"
                    android:layout_marginRight="@dimen/margin_half"
                    style="?attr/materialButtonOutlinedStyle"/>

                <Button
                    android:id="@+id/btn_ch_to_yo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ch_to_yo"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="@dimen/text_size_title"
                    android:minHeight="@dimen/button_minHeight"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:layout_marginTop="@dimen/margin_half"
                    android:layout_marginLeft="@dimen/margin_half"
                    android:layout_marginRight="@dimen/margin_half"
                    style="?attr/materialButtonOutlinedStyle"/>

                <Button
                    android:id="@+id/btn_gi_to_ch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gi_to_ch"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="@dimen/text_size_title"
                    android:minHeight="@dimen/button_minHeight"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:layout_marginTop="@dimen/margin_half"
                    android:layout_marginLeft="@dimen/margin_half"
                    android:layout_marginRight="@dimen/margin_half"
                    style="?attr/materialButtonOutlinedStyle"/>

                <Button
                    android:id="@+id/btn_yo_to_ch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yo_to_ch"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="@dimen/text_size_title"
                    android:minHeight="@dimen/button_minHeight"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:layout_marginTop="@dimen/margin_half"
                    android:layout_marginLeft="@dimen/margin_half"
                    android:layout_marginRight="@dimen/margin_half"
                    android:layout_marginBottom="@dimen/margin_half"
                    style="?attr/materialButtonOutlinedStyle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_bus_56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/background_rounding_shape"
                app:layout_constraintTop_toBottomOf="@id/layout_bus_18"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal">

                <TextView
                    android:id="@+id/text_bus_56"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bus_56"
                    android:layout_marginTop="@dimen/margin_half"
                    android:layout_marginLeft="@dimen/margin_half"
                    android:layout_marginRight="@dimen/margin_half"
                    style="@style/TextBigTitle"/>

                <Button
                    android:id="@+id/btn_ch_to_ju"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ch_to_ju"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="@dimen/text_size_title"
                    android:minHeight="@dimen/button_minHeight"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:layout_marginTop="@dimen/margin_half"
                    android:layout_marginLeft="@dimen/margin_half"
                    android:layout_marginRight="@dimen/margin_half"
                    style="?attr/materialButtonOutlinedStyle"/>

                <Button
                    android:id="@+id/btn_ju_to_ch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ju_to_ch"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="@dimen/text_size_title"
                    android:minHeight="@dimen/button_minHeight"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:layout_marginTop="@dimen/margin_half"
                    android:layout_marginLeft="@dimen/margin_half"
                    android:layout_marginRight="@dimen/margin_half"
                    android:layout_marginBottom="@dimen/margin_half"
                    style="?attr/materialButtonOutlinedStyle"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>